# greendoor

./: .gitignore  README.md  db.sqlite3  get-pip.py  manage.py  pyproject.toml  requirements.txt  secrets.json  test.sh  test2.sh  tsst.sh
.elasticbeanstalk/: config.yml
.github/workflows/: ci.yml
cart/: cart.py  context_processors.py  forms.py  urls.py  views.py
config/: backup_setting.py  eb_settings.py  settings.py  urls.py  utils.py
crawling/: nongsaro_scraping.py
feed/: admin.py  models.py  urls.py  views.py
feed/migrations/: 0001_initial.py  0002_initial.py  0003_alter_feed_content.py  0003_feedbookmark_unique_user_feedbookmark_and_more.py  0004_feed_like_count.py  0005_img_feed_title.py  0006_feed_views.py
feed/services/: bookmark_service.py  comment_service.py  feed_service.py  like_service.py
feed/tests/: test_bookmark_service.py  test_comment_service.py  (+2 more)
greendoor/: asgi.py  models.py  my_settings.py  settings.py  urls.py  utils.py  wsgi.py
info/: admin.py  models.py  urls.py  views.py
order/: forms.py  iamport.py  models.py  urls.py  views.py
plant/: models.py
poetry-greendoor/: pyproject.toml
poetry-greendoor/tests/: test_poetry_greendoor.py
product/: admin.py  models.py  urls.py  views.py
search_app/: urls.py  views.py
survey/: admin.py  models.py  urls.py  views.py
templates/: base.html  detailbase.html  feeddetail.html  feedindex.html  feedmodify.html  feedwrite.html  index.html  indexbase.html  mypage.html  sign.html  signin.html  storeindex.html
user/: admin.py  forms.py  models.py  urls.py  views.py
(+112 files in other folders)
